Index pre changes
Font changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@ $('#showanswer').click(function(){
     background: #F39814; color: white;
     margin: 3px;
     padding: 0.4em;    
-  }  
+  }
+  pre {
+    display: block;
+    font-family: arial;
+    white-space: pre;
+    margin: 1em 0;
+}
   </style>  
 </head>
 <body>
@@ -82,11 +88,11 @@ $('#showanswer').click(function(){
 <br>
 <h3>Project</h3>
 <strong>Introduction</strong>
-<p>One Idea we had was a contractor scheduler and contactor</p>
+<pre>One Idea we had was a contractor scheduler and contactor</pre>
 <strong>Description</strong>
-<p>Bascially at the site there would be two kind of users: Contractors and clients<br>
+<pre>Bascially at the site there would be two kind of users: Contractors and clients<br>
 Contractors would sign up and list their services and fees<br>
 clients would look for contractors in their area<br>
-the service would help with the scheduling of services and payment of fees</p>
+the service would help with the scheduling of services and payment of fees</pre>
 </body>
 </html>
