--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@ $('#showanswer').click(function(){
 <br>
 <h3>Project</h3>
 <strong>Introduction</strong>
-<pre>One Idea we had was a contractor scheduler and contactor</pre>
+<pre>One Idea we had was a money management tool</pre>
 <strong>Description</strong>
-<pre>Bascially at the site there would be two kind of users: Contractors and clients<br>
-Contractors would sign up and list their services and fees<br>
-clients would look for contractors in their area<br>
-the service would help with the scheduling of services and payment of fees</pre>
+<pre>Bascially at app will allow users to track their budget.<br>
+Budget and expenses can be assigned for a given time and be tracked in different ways<br>
+like tracking specific credit/debit cards or bank statement<br>
+The user can set reminders for the payment of credit cards and allot limits in budget</pre>
 </body>
 </html>
